Refactor Club management: replace ClubUpdateDTO with ClubDTO, update create and update methods to handle multipart requests, and add rawName field to Club model.